--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<title>3D Free Kick - 77GAMES.io</title>
-	  <script type="text/javascript" src="https://66games.io/cloak.js"></script>
+	<title>3D Free Kick - Unblcoked Games 76</title>
+	  <script type="text/javascript" src="https://ubg76.github.io/cloak.js"></script>
 	<meta name="description" content="3D Free Kick, Football Game, Games235">
 	<meta property="og:image" content="3d-free-kick.png" />
 	<style>
@@ -40,3 +40,4 @@
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"7764276b5a7f7dc2","version":"2022.11.3","r":1,"token":"01f362c96c87425b85fd71fb46b49c8d","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
+
